--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,9 +1,9 @@
 .footer{
-  position: absolute;
+  position: relative;
   bottom: 0;
+  padding: 20px 0;
   width: 100%;
-  height: 50px;
+  text-align: center;
   background-color: black;
   color: white;
-  text-align: center;
 }
